# Projects-templates

./: LICENSE  README.md
python-cli/: cookiecutter.json
python-cli/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
python-cli/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __version__.py  cli.py  logging_config.py
python-cli/{{cookiecutter.project_slug}}/tests/: test_cli.py
